# crypto-projects

CryptoAPI/: README.md
CryptoAPI/API/: coincap_global.py  coincap_listings.py  coincap_quotes.py
CryptoAPI/Projects/: .gitignore
CryptoAPI/Projects/project1/: description.md  my_portfolio.csv  protfolio.py
CryptoAPI/Projects/project2/: alerts.py  description.md  my_alerts.csv
CryptoAPI/Projects/project3/: description.md  top100.py
CryptoAPI/Projects/project4/: description.md  research.py
CryptoAPI/Projects/project5/: Cryptocurrencies.xlsx  description.md  exel_writer.py
EthPricePredictor/: .gitignore  ETH-USD.csv  README.md  pyproject.toml
EthPricePredictor/configs/: baseline.yaml
EthPricePredictor/scripts/: run_pipeline.py
EthPricePredictor/src/eth_price_predictor/: __init__.py  config.py  data.py  metrics.py  runner.py
EthPricePredictor/src/eth_price_predictor/models/: __init__.py  base.py  classical.py  neural.py
